add insert and delete endpoints for tienda, new exception and unit tests
